# USnake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainwindow.ui
include/: gamecontroller.h  gamewidget.h  mainwindow.h
src/: gamecontroller.cc  gamewidget.cc  main.cc  mainwindow.cc
translations/: USnake_en_US.ts  USnake_zh_CN.qm  USnake_zh_CN.ts  USnake_zh_TW.qm  USnake_zh_TW.ts
